--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "react": "16.13.0",
-    "react-router": "5.0.0"
-    "react-dom": "16.13.0"
+    "react-router": "5.0.0",
+    "react-color": "2.18.0",
+    "react-dom": "16.13.0",
+    "react-popper": "2.2.2"
   }
 }
